TLMB-2.0 - DB Test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# DataSource settings: set here your own configurations for the database
+# DataSource settings: set here your own configurations for the database s
 spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
 spring.datasource.username=postgres
 spring.datasource.password=p123
