--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
 spring.datasource.username=postgres
 spring.datasource.password=p123
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Telegram bot settings
+bot.name=test_learn_montenegrin_bot
+bot.token=6083140824:AAFW_2LFrokhIwKnqCcNdMRtbp4Y4N1GbN4
+
+server.port=8077
