Logging, gitignore, config, init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Telegram bot settings
 bot.name=test_learn_montenegrin_bot
-bot.token=6083140824:AAFW_2LFrokhIwKnqCcNdMRtbp4Y4N1GbN4
+#bot.token=
 
 server.port=8077
