--- a/build.gradle
+++ b/build.gradle
@@ -23,19 +23,20 @@ ext {
 	gradleVersion = '8.0'
 	telegramVersion = '6.5.0'
 	log4jVersion = '2.20.0'
+	flywayVersion = '9.15.0'
+	lombokVersion = '1.18.24'
+	postgresqlVersion = '42.5.0'
 }
 
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.flywaydb:flyway-core'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
+	implementation group: 'org.flywaydb', name: 'flyway-core', version: "${flywayVersion}"
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: "${telegramVersion}"
-	implementation 'org.apache.logging.log4j:log4j-api-test:2.20.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 
 }
 
