--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=p123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Telegram bot settings
-bot.name=test_learn_montenegrin_bot
+#bot.name=test_learn_montenegrin_bot
 #bot.token=
 
 server.port=8077
