--- a/build.gradle
+++ b/build.gradle
@@ -17,26 +17,28 @@ configurations {
 repositories {
 	mavenCentral()
 }
-//TODO log4j version
+
 ext {
 	// Define the versions here
 	gradleVersion = '8.0'
 	telegramVersion = '6.5.0'
-	log4jVersion = '2.20.0'
 	flywayVersion = '9.15.0'
 	lombokVersion = '1.18.24'
 	postgresqlVersion = '42.5.0'
+	mockitoVersion = '4.8.0'
 }
 
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: "${telegramVersion}"
 	implementation group: 'org.flywaydb', name: 'flyway-core', version: "${flywayVersion}"
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
+	implementation 'com.google.guava:guava:30.1.1-jre'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: "${telegramVersion}"
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
 
 }
 
