--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,55 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.7.9'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'java'
+    id 'org.springframework.boot' version '2.7.9'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.github.andyvlasenko'
 version = '0.1.0-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 ext {
-	// Define the versions here
-	gradleVersion = '8.0'
-	telegramVersion = '6.5.0'
-	flywayVersion = '9.15.0'
-	lombokVersion = '1.18.24'
-	postgresqlVersion = '42.5.0'
-	mockitoVersion = '4.8.0'
+    // Define the versions here
+    gradleVersion = '8.0'
+    telegramVersion = '6.5.0'
+    flywayVersion = '9.15.0'
+    lombokVersion = '1.18.24'
+    postgresqlVersion = '42.5.0'
+    mockitoVersion = '4.8.0'
 }
 
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: "${telegramVersion}"
-	implementation group: 'org.flywaydb', name: 'flyway-core', version: "${flywayVersion}"
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
-	annotationProcessor 'org.projectlombok:lombok'
-	implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
-	implementation 'com.google.guava:guava:30.1.1-jre'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: "${telegramVersion}"
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: "${flywayVersion}"
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
 
 }
 
 wrapper {
-	gradleVersion = "${gradleVersion}"
+    gradleVersion = "${gradleVersion}"
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
