--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DataSource settings: set here your own configurations for the database s
 spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
-spring.datasource.username=postgres
+spring.datasource.username=telegram_bot
 spring.datasource.password=p123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
